@@ -67,6 +67,7 @@ Template for new versions:
 ## API
 
 ## Lua
+- ``dfhack.gui.getSelectedJob``: can now return the job with a destination under the keyboard cursor (e.g. digging/carving/engraving jobs)
 
 ## Removed
 
